[NCITERM-764] Implementing DAP.

--- a/software/ncitbrowser/web/pages/deprecated/FlexoViz.html
+++ b/software/ncitbrowser/web/pages/deprecated/FlexoViz.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+<script src="//assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-4b219b82c4737db0e1797b6c511cf10c802c95cb.js"></script>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>NCBO BioPortal Ontology Visualization</title>
 	<script src="flexoviz.js" language="javascript" type="text/javascript"></script>
@@ -57,5 +58,6 @@ var requiredRevision = 28;
 
 
 
+<script type="text/javascript">_satellite.pageBottom();</script>
 </body>
 </html>
