--- a/software/ncitbrowser/web/pages/deprecated/FlexoViz.html
+++ b/software/ncitbrowser/web/pages/deprecated/FlexoViz.html
@@ -1,63 +1,72 @@
 <html lang="en">
-<head>
-<script src="//assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-4b219b82c4737db0e1797b6c511cf10c802c95cb.js"></script>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>NCBO BioPortal Ontology Visualization</title>
-	<script src="flexoviz.js" language="javascript" type="text/javascript"></script>
-</head>
+  <head>
+    <script
+        src="//assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-4b219b82c4737db0e1797b6c511cf10c802c95cb.js">
+    </script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>NCBO BioPortal Ontology Visualization</title>
+    <script src="flexoviz.js" language="javascript" type="text/javascript"></script>
+  </head>
 
-<body scroll="no" style="margin:0px;overflow:hidden;">
+  <body scroll="no" style="margin:0px;overflow:hidden;">
 
-<script language="JavaScript" type="text/javascript">
-<!--
-// Globals
-// Major version of Flash required
-var requiredMajorVersion = 9;
-// Minor version of Flash required
-var requiredMinorVersion = 0;
-// Minor version of Flash required
-var requiredRevision = 28;
-// -->
-</script>
-<script src="AC_OETags.js" language="javascript" type="text/javascript"></script>
+    <script language="JavaScript" type="text/javascript">
+    <!--
+      // Globals
+      // Major version of Flash required
+      var requiredMajorVersion = 9;
+      // Minor version of Flash required
+      var requiredMinorVersion = 0;
+      // Minor version of Flash required
+      var requiredRevision = 28;
+    // -->
+    </script>
+    <script src="AC_OETags.js" language="javascript" type="text/javascript"></script>
 
-<!--  BEGIN Browser History required section -->
-<style type="text/css">
-#ie_historyFrame { width: 0px; height: 0px; display:none }
-#firefox_anchorDiv { width: 0px; height: 0px; display:none }
-#safari_formDiv { width: 0px; height: 0px; display:none }
-#safari_rememberDiv { width: 0px; height: 0px; display:none }
-</style>
-<script src="history/history.js" language="javascript"></script>
-<!--  END Browser History required section -->
+    <!-- BEGIN Browser History required section -->
+    <style type="text/css">
+      #ie_historyFrame { width: 0px; height: 0px; display:none } #firefox_anchorDiv { width: 0px; height: 0px;
+      display:none } #safari_formDiv { width: 0px; height: 0px; display:none } #safari_rememberDiv { width: 0px; height:
+      0px; display:none }
+    </style>
+    <script src="history/history.js" language="javascript"></script>
+    <!-- END Browser History required section -->
 
-<script language="javascript" type="text/javascript">
+    <script language="javascript" type="text/javascript">
 
-</script>
-<noscript>
-  	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
-			id="FlexoViz" width="100%" height="100%"
-			codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
-			<param name="movie" value="FlexoViz.swf" />
-			<param name="quality" value="high" />
-			<param name="bgcolor" value="#ffffff" />
-			<param name="allowScriptAccess" value="always" />
-			<param name="flashVars" value="server=&ontology=50148&nodeid=" />
-			<embed src="FlexoViz.swf" bgcolor="#ffffff"
-				width="100%" height="100%" name="FlexoViz" align="middle"
-				play="true"
-				loop="false"
-				quality="high"
-				allowScriptAccess="always"
-				type="application/x-shockwave-flash"
-				flashVars="server=&ontology=&nodeid="
-				pluginspage="http://www.adobe.com/go/getflashplayer">
-			</embed>
-	</object>
-</noscript>
+    </script>
+    <noscript>
+      <object
+          classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
+          id="FlexoViz"
+          width="100%"
+          height="100%"
+          codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
 
+        <param name="movie" value="FlexoViz.swf" />
+        <param name="quality" value="high" />
+        <param name="bgcolor" value="#ffffff" />
+        <param name="allowScriptAccess" value="always" />
+        <param name="flashVars" value="server=&ontology=50148&nodeid=" />
+        <embed
+            src="FlexoViz.swf"
+            bgcolor="#ffffff"
+            width="100%"
+            height="100%"
+            name="FlexoViz"
+            align="middle"
+            play="true"
+            loop="false"
+            quality="high"
+            allowScriptAccess="always"
+            type="application/x-shockwave-flash"
+            flashVars="server=&ontology=&nodeid="
+            pluginspage="http://www.adobe.com/go/getflashplayer">
 
+        </embed>
+      </object>
+    </noscript>
 
-<script type="text/javascript">_satellite.pageBottom();</script>
-</body>
+    <script type="text/javascript">_satellite.pageBottom();</script>
+  </body>
 </html>
