--- a/software/ncitbrowser/web/pages/deprecated/FlexoViz.html
+++ b/software/ncitbrowser/web/pages/deprecated/FlexoViz.html
@@ -12,11 +12,15 @@
 	gtag('js', new Date());
 	gtag('config', 'G-21QRTJ0WQS');
 </script>
+    <script src="https://cbiit.github.io/nci-softwaresolutions-elements/components/include-html.js"></script>
     <title>NCBO BioPortal Ontology Visualization</title>
     <script src="flexoviz.js" language="javascript" type="text/javascript"></script>
   </head>
 
   <body scroll="no" style="margin:0px;overflow:hidden;">
+  <header class="flex-grow-0">
+	<include-html src="https://cbiit.github.io/nci-softwaresolutions-elements/banners/government-shutdown-test.html"></include-html>
+  </header>
 
     <script language="JavaScript" type="text/javascript">
     <!--
