--- a/software/ncitbrowser/web/pages/deprecated/FlexoViz.html
+++ b/software/ncitbrowser/web/pages/deprecated/FlexoViz.html
@@ -19,7 +19,9 @@
 
   <body scroll="no" style="margin:0px;overflow:hidden;">
   <header class="flex-grow-0">
+	<div style='text-align: left'>
 	<include-html src="https://cbiit.github.io/nci-softwaresolutions-elements/banners/government-shutdown.html"></include-html>
+	</div>
   </header>
 
     <script language="JavaScript" type="text/javascript">
